--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,31 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>s4y.solutions</groupId>
-    <artifactId>waytoday-sdk</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>solutions.s4y.waytoday</groupId>
+    <artifactId>waytoday-sdk-java</artifactId>
+    <version>1.0.0-dev.3</version>
+    <packaging>jar</packaging>
+
+    <name>WayToday Java SDK</name>
+    <description>The jar library to request the TrackId from the service and
+    upload the tracked locations to the service.</description>
+    <url>https://github.com/s4ysolutions/WayTodaySDK-Java</url>
+    <issueManagement>
+        <system>github</system>
+        <url>https://github.com/s4ysolutions/WayTodaySDK-Java/issues</url>
+    </issueManagement>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <scm>
+        <connection>scm:git:https://github.com/s4ysolutions/WayTodaySDK-Java.git</connection>
+        <developerConnection>scm:git:https://github.com/s4ysolutions/WayTodaySDK-Java.git</developerConnection>
+        <url>https://github.com/s4ysolutions/WayTodaySDK-Java.git</url>
+    </scm>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -43,17 +65,18 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.6.3</version>
+                <configuration>
+                    <excludePackageNames>solutions.s4y.waytoday.grpc:solutions.s4y.waytoday.sdk.dependencies:solutions.s4y.waytoday.sdk.wsse</excludePackageNames>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <reporting>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.6.2</version>
-                <configuration>
-                </configuration>
-            </plugin>
         </plugins>
     </reporting>
     <dependencies>
@@ -63,6 +86,12 @@
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
             <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-okhttp</artifactId>
+            <version>1.59.0</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
@@ -84,6 +113,12 @@
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
             <version>3.25.1</version>
+        </dependency>
+        <!-- -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.7</version>
         </dependency>
         <!-- junit5 tests -->
         <dependency>
