--- a/pom.xml
+++ b/pom.xml
@@ -115,18 +115,18 @@
             <version>3.25.1</version>
         </dependency>
         <!-- -->
-        <dependency>
+        <!-- dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.0.7</version>
-        </dependency>
+        </dependency -->
         <!-- test scope -->
-        <dependency>
+        <!-- dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.7</version>
             <scope>test</scope>
-        </dependency>
+        </dependency-->
         <!-- junit5 tests -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
